--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     ext.kotlin_version = '1.2.30'
     ext.anko_version='0.10.5'
+    ext.suport_design_version = '28.0.0-rc01'
+
     repositories {
         google()
         jcenter()
