--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
         <activity
             android:name=".view.SplashActivity"
             android:theme="@style/AppTheme_NoActionBar">
+
+        </activity>
+        <activity android:name=".view.HomeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.HomeActivity" />
         <activity android:name=".view.meals.register.AddNewMealActivity"></activity>
     </application>
 
