--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.30'
-    ext.anko_version='0.10.5'
+    ext.anko_version = '0.10.5'
     ext.suport_design_version = '28.0.0-rc01'
 
     repositories {
@@ -22,6 +22,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://dl.bintray.com/sh3lan93/Android' }
+        maven { url 'https://jitpack.io' }
     }
 }
 
