--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$suport_design_version"
-//    implementation "org.jetbrains.anko:anko:$anko_version"
+    implementation "com.code-troopers.betterpickers:library:3.1.0"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation "com.android.support:support-v4:$suport_design_version"
     testImplementation 'junit:junit:4.12'
@@ -33,5 +33,7 @@ dependencies {
     implementation "com.android.support:design:$suport_design_version"
     implementation 'com.github.AnkitKiet:CounterView:1.4'
     implementation 'com.mohamed.shalan:inc-dec-view:1.0'
+    implementation 'com.github.chuross:expandable-layout:1.0.5'
+
 
 }
