--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "com.android.support:design:$suport_design_version"
-    implementation 'com.github.AnkitKiet:CounterView:1.4'
-    implementation 'com.mohamed.shalan:inc-dec-view:1.0'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.github.chuross:expandable-layout:1.0.5'
 
 
