feat: Edit meal
editting and deleting meal screen implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,17 @@
             </intent-filter>
         </activity>
         <activity
+
             android:theme="@style/AppTheme"
             android:name=".view.meals.register.AddNewMealActivity">
 
         </activity>
+
+        <activity
+            android:theme="@style/AppTheme"
+            android:name=".view.meals.edit.EditMealActivity">
+        </activity>
+
     </application>
 
 </manifest>
