--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,28 +11,26 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme_NoActionBar">
+        android:theme="@style/ComaCertoAppTheme">
         <activity
             android:name=".view.SplashActivity"
-            android:theme="@style/AppTheme_NoActionBar">
+            android:theme="@style/ComaCertoAppTheme_NoActionBar">
 
         </activity>
-        <activity android:name=".view.HomeActivity" >
+        <activity
+            android:theme="@style/ComaCertoAppTheme_NoActionBar"
+            android:name=".view.HomeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-
-            android:theme="@style/AppTheme"
             android:name=".view.meals.register.AddNewMealActivity">
 
         </activity>
 
         <activity
-            android:theme="@style/AppTheme"
             android:name=".view.meals.edit.EditMealActivity">
         </activity>
 
