--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,37 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="apps.esampaio.com.comacerto">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        tools:replace="android:theme"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/ComaCertoAppTheme">
+        android:theme="@style/ComaCertoAppTheme"
+        tools:replace="android:theme">
         <activity
             android:name=".view.SplashActivity"
-            android:theme="@style/ComaCertoAppTheme_NoActionBar">
-
-        </activity>
+            android:theme="@style/ComaCertoAppTheme_NoActionBar"></activity>
         <activity
-            android:theme="@style/ComaCertoAppTheme_NoActionBar"
-            android:name=".view.HomeActivity" >
+            android:name=".view.HomeActivity"
+            android:theme="@style/ComaCertoAppTheme_NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".view.meals.register.AddNewMealActivity">
-
-        </activity>
-
-        <activity
-            android:name=".view.meals.edit.EditMealActivity">
-        </activity>
-
+        <activity android:name=".view.meals.register.AddNewMealActivity"></activity>
+        <activity android:name=".view.meals.edit.EditMealActivity"></activity>
+        <activity android:name=".view.help.ShowHelpTopicActivity"></activity>
     </application>
 
 </manifest>
