--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_8
-//        targetCompatibility JavaVersion.VERSION_1_8
-//    }
 }
 
 dependencies {
@@ -33,6 +29,7 @@ dependencies {
     implementation "com.android.support:support-v4:$suport_design_version"
     implementation "com.android.support:preference-v7:$suport_design_version"
     implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-config:11.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -46,9 +43,7 @@ dependencies {
     implementation 'com.github.BlackBoxVision:material-calendar-view:v1.5.7'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.github.GrenderG:MarkdownView:0.1.2'
-//    implementation 'com.github.Shashank02051997:FancyAlertDialog-Android:0.1'
     implementation 'com.github.droidbyme:DroidDialog:c6decc7167'
-//    implementation 'com.github.andyxialm:ColorDialog:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
