--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="apps.esampaio.com.comacerto">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApplication"
@@ -16,7 +16,7 @@
         tools:replace="android:theme">
         <activity
             android:name=".view.SplashActivity"
-            android:theme="@style/ComaCertoAppTheme_NoActionBar"></activity>
+            android:theme="@style/ComaCertoAppTheme_NoActionBar" />
         <activity
             android:name=".view.HomeActivity"
             android:theme="@style/ComaCertoAppTheme_NoActionBar">
@@ -26,9 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.meals.register.AddNewMealActivity"></activity>
-        <activity android:name=".view.meals.edit.EditMealActivity"></activity>
-        <activity android:name=".view.help.ShowHelpTopicActivity"></activity>
+        <activity android:name=".view.meals.register.AddNewMealActivity" />
+        <activity android:name=".view.meals.edit.EditMealActivity" />
+        <activity android:name=".view.help.ShowHelpTopicActivity" />
+        <activity android:name=".view.meals.register.SelectFoodsActivity"></activity>
     </application>
 
 </manifest>
