--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,16 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "apps.esampaio.com.comacerto"
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "0.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug{
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -22,33 +25,32 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "com.android.support:appcompat-v7:$suport_design_version"
-    implementation "com.code-troopers.betterpickers:library:3.0.0"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation "com.android.support:support-v4:$suport_design_version"
-    implementation "com.android.support:preference-v7:$suport_design_version"
-    implementation 'com.google.firebase:firebase-core:11.8.0'
-    implementation 'com.google.firebase:firebase-config:11.8.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation "com.android.support:design:$suport_design_version"
-    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
-    implementation 'com.github.chuross:expandable-layout:1.0.5'
-    implementation "android.arch.persistence.room:runtime:1.0.0"
     kapt "android.arch.persistence.room:compiler:1.0.0"
+
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
     implementation "org.jetbrains.anko:anko-common:$anko_version"
-    implementation 'com.github.BlackBoxVision:material-calendar-view:v1.5.7'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation "com.android.support:appcompat-v7:$suport_design_version"
+    implementation "com.android.support:support-v4:$suport_design_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support:preference-v7:$suport_design_version"
+    implementation "com.android.support:design:$suport_design_version"
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-config:11.8.0'
+    implementation 'com.github.chuross:expandable-layout:1.0.5'
     implementation 'com.github.GrenderG:MarkdownView:0.1.2'
     implementation 'com.github.droidbyme:DroidDialog:c6decc7167'
+    implementation "com.code-troopers.betterpickers:library:3.0.0"
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
 
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
