--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,16 @@
 buildscript {
     ext.kotlin_version = '1.2.30'
     ext.anko_version = '0.10.5'
-    ext.suport_design_version = '28.0.0-rc01'
+    ext.suport_design_version = '28.0.0-rc02'
+    ext.firebase_version = "11.8.0"
+    ext.firebase_config_version = "11.8.0"
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
