--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,8 @@
                 android:resource="@xml/provider_paths"/>
         </provider>
 
-        <receiver android:exported="true" android:name=".core.service.reminder.MealAlarmBroadcastReceiver"/>
+        <receiver  android:name=".core.service.reminder.MealAlarmBroadcastReceiver"
+             />
 
     </application>
 
