feat: Generate Reports
add option to select last month and custom period
adding splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -17,15 +17,17 @@
         tools:replace="android:theme">
         <activity
             android:name=".view.SplashActivity"
-            android:theme="@style/ComaCertoAppTheme_NoActionBar" />
-        <activity
-            android:name=".view.HomeActivity"
-            android:theme="@style/ComaCertoAppTheme_NoActionBar">
+            android:theme="@style/ComaCertoAppTheme_NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".view.HomeActivity"
+            android:theme="@style/ComaCertoAppTheme_NoActionBar">
+
         </activity>
         <activity android:name=".view.meals.register.AddNewMealActivity" />
         <activity android:name=".view.meals.edit.EditMealActivity" />
