--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "apps.esampaio.com.comacerto"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 5
-        versionName "0.0.5"
+        versionCode 7
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -61,7 +61,6 @@ dependencies {
     implementation 'com.github.GrenderG:MarkdownView:0.1.2'
     implementation 'com.github.droidbyme:DroidDialog:c6decc7167'
     implementation "com.code-troopers.betterpickers:library:3.1.0"
-    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
@@ -72,7 +71,7 @@ dependencies {
     implementation('com.github.lowlevel-studios:storo:1.2.0') {
         transitive = true
     }
-
+    implementation 'com.archit.calendar:awesome-calendar:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
