feat: Add water
Creating views for add water feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/ComaCertoAppTheme"
         tools:replace="android:theme">
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_key"/>
+
         <activity
             android:name=".view.SplashActivity"
             android:theme="@style/ComaCertoAppTheme_NoActionBar" >
