--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,14 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/ComaCertoAppTheme"
         tools:replace="android:theme">
-
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/admob_app_key"/>
+            android:value="@string/admob_app_key" />
 
         <activity
             android:name=".view.SplashActivity"
-            android:theme="@style/ComaCertoAppTheme_NoActionBar" >
+            android:theme="@style/ComaCertoAppTheme_NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,16 +30,14 @@
         </activity>
         <activity
             android:name=".view.HomeActivity"
-            android:theme="@style/ComaCertoAppTheme_NoActionBar">
-
-        </activity>
+            android:theme="@style/ComaCertoAppTheme_NoActionBar"></activity>
         <activity android:name=".view.meals.register.AddNewMealActivity" />
         <activity android:name=".view.meals.edit.EditMealActivity" />
         <activity android:name=".view.help.ShowHelpTopicActivity" />
         <activity android:name=".view.meals.register.SelectFoodsActivity">
-            <meta-data android:name="android.app.searchable"
+            <meta-data
+                android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
-
         </activity>
 
         <provider
@@ -50,12 +47,12 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
 
-        <receiver  android:name=".core.service.reminder.MealAlarmBroadcastReceiver"
-             />
+        <receiver android:name=".core.service.reminder.MealAlarmBroadcastReceiver" />
 
+        <activity android:name=".view.water.AddWaterActivity"></activity>
     </application>
 
 </manifest>
