--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "apps.esampaio.com.comacerto"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 10
-        versionName "1.0.2"
+        versionCode 11
+        versionName "1.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -61,6 +61,8 @@ dependencies {
 
     implementation "com.leinardi.android:speed-dial:2.0.0"
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    //timeline
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
