--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,8 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     //timeline
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.0'
+    //pdf
+    implementation 'com.uttampanchasara.pdfgenerator:pdfgenerator:1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
