--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.1.0'
     //pdf
     implementation 'com.uttampanchasara.pdfgenerator:pdfgenerator:1.3'
+    //view pager
+    implementation 'com.huanhailiuxin.view:coolviewpager:1.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
