--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "apps.esampaio.com.comacerto"
         minSdkVersion 21
         targetSdkVersion 28
-        versionCode 11
-        versionName "1.1.0"
+        versionCode 12
+        versionName "1.1.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,6 +20,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 
 
@@ -67,6 +71,8 @@ dependencies {
     implementation 'com.uttampanchasara.pdfgenerator:pdfgenerator:1.3'
     //view pager
     implementation 'com.huanhailiuxin.view:coolviewpager:1.0.0'
+    //html builder
+    implementation 'com.j2html:j2html:1.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
